# gdextension_serialport

./: .clang-format  CMakeLists.txt
cmake/: gdextension.cmake  serialport.cmake
demo/: icon.svg.import  main.gd  main.tscn  project.godot
include/: register_types.h
serialport_cpp/: CMakeLists.txt
serialport_cpp/cmake/: serialport.cmake
serialport_cpp/src/: example.cc  register_types.cc  serialport.cc
src/: CMakeLists.txt  example.cc  example.hpp  libserialport.hpp  port_config.cc  port_config.hpp  register_types.cc  register_types.h  serial.cc  serial.hpp  serial_port.cc  serial_port.hpp  serialport.cc  serialport.hpp
